--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
   <link rel="shortcut icon" href="assets/favicon/favicon.ico" type="image/x-icon" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./scss/style.scss">
   <title>BHROMAON</title>
 </head>
@@ -14,7 +16,7 @@
   <module href="/header.html"></module>
   <module href="/why-section.html"></module>
   <module href="/panel-section.html"></module>
-  <module href="/double-section.html"></module>
+  <module href="/country-section.html"></module>
   <module href="/quote-section.html"></module>
   <module href="/footer.html"></module>
 </body>
